--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
 
     .main_div{
         width: 500px;
-        height: 500px;
+        height: 300px;
         background-color: #181818;
         margin: 0%;
     }
@@ -82,6 +82,7 @@
     display: block;
     border-bottom: 0.3rem solid transparent;
     transition: all 0.3s;
+    align-items: center;
     }
 
     .form__input:placeholder-shown + .form__label {
@@ -89,6 +90,7 @@
     visibility: hidden;
     -webkit-transform: translateY(-4rem);
     transform: translateY(-4rem);
+    align-items: center;
     }
 
     .your_id{
@@ -169,7 +171,7 @@
     <div class="container">
         <h1 class="your_id">Votre ID : 1250148</h1>
         <div class="form__group">
-            <input type="text" class="form__input" id="name" placeholder="ID friend" required="" />
+            <input type="text" class="form__input" id="name" placeholder="ID AMI" required="" />
         </div>
         <a href="https://www.youtube.com/feed/subscriptions" class="btn effect04" data-sm-link-text="Let's go !" target="_blank"><span>Rejoindre</span></a>
     </div>
