changin link logo

--- a/popup.html
+++ b/popup.html
@@ -165,7 +165,7 @@
 
 <div class="main_div">
     <header>
-        <a href="https://www.youtube.com/feed/subscriptions" target="_blank"><img src="./youtube.png" alt="logo" class="logo"></img></a>
+        <a href="https://github.com/TomLeCollegue/PlayShare" target="_blank"><img src="./youtube.png" alt="logo" class="logo"></img></a>
         <h1>PlayShare</h1>
     </header>
     <div class="container">
